@@ -21,6 +21,9 @@ https://savannah.nongnu.org/patch/?6693
 patch #6694: Log exceptions
 https://savannah.nongnu.org/patch/?6694
 
+patch #6695: Log filenames
+https://savannah.nongnu.org/patch/?6695
+
 
 New in v0.5.03 (2008/11/17)
 ---------------------------
